# immichpy

./: .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CLI.md  COMPATIBILITY.csv  CONTRIBUTING.md  LICENSE  README.md  mise.ci.toml  mise.toml  mkdocs.yml  mypy.ini  pyproject.toml  renovate.json  vercel.json  zensical.toml
.cursor/rules/: conventional-commits.mdc  dev-tools.mdc  style.mdc
.github/: CODEOWNERS
.github/workflows/: cd.yml  docs-preview.yml  docs-production.yml  docs.yml  release.yml  test.yml  upstream-sync.yml
cli/: codegen.py
docs/: .nav.yml  credits.md  custom-functions.md  getting-started.md  index.md  versioning.md
docs/cli/: authentication.md  env-vars.md  examples.md  getting-started.md  reference.md  usage-tips.md
docs/client/: .nav.yml  configuration.md  exception-handling.md  getting-started.md  integration-guide.md  response-types.md  session-management.md
docs/client/reference/: AsyncClient.md  activities_api.md  albums_api.md  api_keys_api.md  assets_api.md  authentication_admin_api.md  authentication_api.md  client.md  deprecated_api.md  download_api.md  duplicates_api.md  exceptions.md  faces_api.md  index.md  jobs_api.md  libraries_api.md  maintenance_admin_api.md  map_api.md  memories_api.md  notifications_admin_api.md  notifications_api.md  partners_api.md  people_api.md  plugins_api.md  queues_api.md  responses.md  search_api.md  server_api.md  sessions_api.md  shared_links_api.md  stacks_api.md  sync_api.md  system_config_api.md  system_metadata_api.md  tags_api.md  timeline_api.md  trash_api.md  users_admin_api.md  users_api.md  views_api.md  (+1 more)
docs/client/reference/api/: activities_api.md  albums_api.md  api_keys_api.md  assets_api.md  authentication_admin_api.md  authentication_api.md  database_backups_admin_api.md  deprecated_api.md  download_api.md  duplicates_api.md  faces_api.md  jobs_api.md  libraries_api.md  maintenance_admin_api.md  map_api.md  memories_api.md  notifications_admin_api.md  notifications_api.md  partners_api.md  people_api.md  plugins_api.md  queues_api.md  search_api.md  server_api.md  sessions_api.md  shared_links_api.md  stacks_api.md  sync_api.md  system_config_api.md  system_metadata_api.md  tags_api.md  timeline_api.md  trash_api.md  users_admin_api.md  users_api.md  views_api.md  workflows_api.md
docs/client/reference/custom/: assets_api_wrapped.md  download_api_wrapped.md  upload_result.md  users_api_wrapped.md
docs/client/reference/models/: activity_create_dto.md  add_users_dto.md  (+395 more)
docs/info/: contributing.md  credits.md
docs/overview/: auto-sync.md  custom-functions.md  features.md  getting-started.md  versioning.md  who-uses-immichpy.md  why.md
immich/: __init__.py  sdk.py  upload.py  utils.py
immich/_internal/: consts.py  types.py  upload.py  utils.py
immich/_internal/cli/: utils.py
immich/_internal/client/: download.py  upload.py
immich/_internal/client_wrapper/: assets_api_wrapped.py  download_api_wrapped.py  users_api_wrapped.py
immich/cli/: __init__.py  __main__.py  app.py  config.py  consts.py  main.py  runtime.py  types.py  utils.py
immich/cli/commands/: __init__.py  activities.py  albums.py  api_keys.py  assets.py  authentication.py  authentication_admin.py  database_backups_admin.py  download.py  duplicates.py  faces.py  jobs.py  libraries.py  maintenance_admin.py  map.py  memories.py  notifications.py  notifications_admin.py  partners.py  people.py  plugins.py  queues.py  search.py  server.py  sessions.py  shared_links.py  stacks.py  sync.py  system_config.py  system_metadata.py  tags.py  timeline.py  trash.py  users.py  users_admin.py  views.py  workflows.py
immich/cli/wrapper/: assets.py  config.py  download.py  setup.py  users.py
immich/cli_wrapper/: __init__.py
immich/cli_wrapper/commands/: __init__.py  assets.py  config.py  download.py  setup.py  users.py
immich/client/: .openapi-generator-ignore  consts.py  main.py  types.py
immich/client/.openapi-generator/: FILES
immich/client/api/: server_api.py
immich/client/models/: asset_response_dto.py
immich/client/utils/: download.py  upload.py
immich/client/wrapper/: assets_api_wrapped.py  download_api_wrapped.py  users_api_wrapped.py
immich/client_wrapper/: __init__.py  assets_api_wrapped.py  download_api_wrapped.py  users_api_wrapped.py
immichpy/: __init__.py
immichpy/.openapi-generator/: FILES
immichpy/cli/: __main__.py  consts.py  main.py  runtime.py  types.py  utils.py
immichpy/cli/commands/: activities.py  albums.py  api_keys.py  assets.py  authentication.py  authentication_admin.py  database_backups_admin.py  download.py  duplicates.py  faces.py  jobs.py  libraries.py  maintenance_admin.py  map.py  memories.py  notifications.py  notifications_admin.py  partners.py  people.py  plugins.py  queues.py  search.py  server.py  sessions.py  shared_links.py  stacks.py  sync.py  system_config.py  system_metadata.py  tags.py  timeline.py  trash.py  users.py  users_admin.py  views.py  workflows.py
immichpy/cli/wrapper/: assets.py  config.py  download.py  setup.py  users.py
immichpy/client/: consts.py  main.py  types.py
immichpy/client/.openapi-generator/: FILES
immichpy/client/utils/: download.py  upload.py
immichpy/client/wrapper/: assets_api_wrapped.py  download_api_wrapped.py  users_api_wrapped.py
tests/: conftest.py  generators.py  test_cli_codegen.py  test_cli_stub.py  test_upload.py  test_utils.py
tests/e2e/: conftest.py
tests/e2e/cli/: conftest.py  test_callback.py  test_complex_body_type.py  test_config.py  test_list_repeated_flags.py  test_multipart_form_data.py  test_no_params.py  test_optional_body_params.py  test_optional_query_bool_enum.py  test_path_param.py  test_required_body_params.py  test_setup.py  test_wrappers.py
tests/e2e/client/: conftest.py  generators.py  test_wrappers.py
tests/unit/: conftest.py  test_async_custom_session.py  test_upload.py
tests/unit/cli/: conftest.py  test_import.py  test_main.py  test_runtime.py  test_utils.py
tests/unit/client/: test_async_client.py  test_async_custom_session.py  test_download.py  test_upload.py
(+11 files in other folders)
