[project]
name = "immich"
description = "Unofficial Python client for Immich"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{name = "Immich Python Client", email = "contact@timonrieger.de"}]
version = "1.5.1"
keywords = ["immich", "photos", "backup", "client", "api"]

classifiers = [
    "Topic :: Multimedia",
    "Topic :: Software Development :: Libraries",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = [
    "aiohttp>=3.8.4,<4.0.0",
    "aiohttp-retry>=2.8.3,<3.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "pystatx>=0.1,<0.2",
    "python-dateutil>=2.8.2,<3.0.0",
    "requests>=2.32.0,<3.0.0",
    "tqdm>=4.67.0,<5.0.0",
    "typing-extensions>=4.7.1,<5.0.0",
    "urllib3>=1.25.3,<3.0.0",
]

[project.optional-dependencies]
build = ["uv==0.9.21"]

[project.urls]
Repository = "https://github.com/timonrieger/immich-python-client"
Changelog = "https://github.com/timonrieger/immich-python-client/releases"

[build-system]
requires = ["uv_build==0.9.21"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.0,<10.0.0",
    "pytest-asyncio>=1.2.0,<2.0.0",
    "pytest-cov>=7.0.0,<8.0.0",
    "ty>=0.0.10,<0.0.11",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version:nf",] # https://python-semantic-release.readthedocs.io/en/latest/configuration.html#version-toml
commit_message = "Python Release v{version}\n\nAutomatically generated by python-semantic-release" # https://python-semantic-release.readthedocs.io/en/latest/configuration.html#commit-message
# https://python-semantic-release.readthedocs.io/en/latest/configuration.html#build-command
# https://python-semantic-release.readthedocs.io/en/latest/configuration/configuration-guides/uv_integration.html#updating-the-uv-lock
# Builds package and updates compatibility.csv with package/server version mapping
build_command = """
    python -m pip install -e '.[build]'
    uv lock --upgrade-package "$PACKAGE_NAME"
    PACKAGE_VERSION=v$(uv version --short)
    SERVER_VERSION=$(cat IMMICH-VERSION | tr -d '[:space:]')
    echo "$PACKAGE_VERSION,$SERVER_VERSION" >> COMPATIBILITY.csv
    uv build
    git add uv.lock COMPATIBILITY.csv
"""
# https://python-semantic-release.readthedocs.io/en/latest/multibranch_releases.html#multibranch-releases
branches.main.match = "main"
branches.main.prerelease = false

[tool.uv]
add-bounds = "major"

[tool.uv.build-backend]
module-name = "immich"
module-root = ""

[tool.ruff]
lint.ignore = ["E721", "F403"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[tool.ty]
environment.root = ['immich']
src.exclude = ["immich/client/**"]
rules.unresolved-import = "ignore"
