[project]
name = "immich"
description = "Unofficial HTTP client and CLI for Immich written in Python"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{name = "Immich Python Client", email = "contact@timonrieger.de"}]
version = "1.7.3"
keywords = ["immich", "photos", "backup", "client", "api", "cli"]

classifiers = [
    "Topic :: Multimedia",
    "Topic :: Software Development :: Libraries",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = [
    "aiohttp>=3.8.4,<4.0.0",
    "aiohttp-retry>=2.8.3,<3.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "pystatx>=0.1,<0.2",
    "python-dateutil>=2.8.2,<3.0.0",
    "rich>=14.2.0,<15.0.0",
    "typing-extensions>=4.7.1,<5.0.0",
]

[project.optional-dependencies]
build = ["uv==0.9.26"]
cli = [
    "rtoml>=0.13.0,<0.14.0",
    "typer>=0.21.1,<0.22.0",
]

[project.scripts]
immich = "immich.cli.__main__:main"

[project.urls]
Repository = "https://github.com/timonrieger/immich-py"
Changelog = "https://github.com/timonrieger/immich-py/releases"

[build-system]
requires = ["uv_build==0.9.26"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pillow>=12.1.0,<13.0.0",
    "pytest>=9.0.0,<10.0.0",
    "pytest-asyncio>=1.2.0,<2.0.0",
    "pytest-cov>=7.0.0,<8.0.0",
    "ty>=0.0.14,<0.0.15",
]
docs = [
    "griffe-pydantic>=1.2.0,<2.0.0",
    "mkdocstrings[python]>=1.0.1,<2.0.0",
    "pymdown-extensions>=10.20,<11.0",
    "termynal>=0.13.1,<0.14.0",
    "typer>=0.21.1,<0.22.0",
    "zensical>=0.0.20,<0.0.21",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version:nf",] # https://python-semantic-release.readthedocs.io/en/latest/configuration/configuration.html#version-toml
commit_message = "Release v{version} [skip ci]\n\nAutomatically generated by python-semantic-release" # https://python-semantic-release.readthedocs.io/en/latest/configuration/configuration.html#commit-message
# https://python-semantic-release.readthedocs.io/en/latest/configuration/configuration.html#build-command
# https://python-semantic-release.readthedocs.io/en/latest/configuration/configuration-guides/uv_integration.html#updating-the-uv-lock
# Builds package and updates compatibility.csv with package/server version mapping
build_command = """
    python -m pip install -e '.[build]'
    uv lock --upgrade-package "$PACKAGE_NAME"
    PACKAGE_VERSION=v$(uv version --short)
    SERVER_VERSION=$(cat IMMICH-VERSION | tr -d '[:space:]')
    echo "$PACKAGE_VERSION,$SERVER_VERSION" >> COMPATIBILITY.csv
    uv build
    git add uv.lock COMPATIBILITY.csv
"""

[tool.uv]
add-bounds = "major"

[tool.uv.build-backend]
module-name = "immich"
module-root = ""

[tool.ruff]
lint.ignore = ["F403", "F405", "F841"] # F841: Unused local variable (after client gen)

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
markers = [
    "e2e: marks tests as end-to-end tests (deselect with '-m \"not e2e\"')",
]

[tool.coverage.run]
omit = ["immich/client/generated/**", "immich/cli/commands/**", "immich/client/wrapper/**"]

[tool.ty]
environment.root = ['immich']
src.exclude = ["immich/client/generated/**"]
rules.unresolved-import = "ignore"
